--- a/pages/index/help/help.wxml
+++ b/pages/index/help/help.wxml
@@ -5,6 +5,28 @@
 </view>
 <view class='container'>
   <view class='subtitle'>
+    <text>九宫图片分割工具</text>
+  </view>
+  <view class='content'>
+    <text>您可以使用本模块将一幅图片分割为九张正方形图片，以便在社交媒体发布和分享。本模块默认会以短边自适应方式截取原图片的中央部分，也可以自定义截取位置，满足您的更多需求。</text>
+  </view>
+</view>
+<view class='container row-flex'>
+  <view class='half'>
+    <button class='side-button' bindtap='showPanel' id='gridsDivider'>
+      <text>了解更多</text>
+      <view class='button-mask' hover-class='button-mask__hover'></view>
+    </button>
+  </view>
+  <view class='half'>
+    <button class='main-button' bindtap='gotoPage' id='gridsDivider' data-parent='image'>
+      <text>前往</text>
+      <view class='button-mask' hover-class='button-mask__hover'></view>
+    </button>
+  </view>
+</view>
+<view class='container'>
+  <view class='subtitle'>
     <text>朋友圈高清图片生成器</text>
   </view>
   <view class='content'>
@@ -124,19 +146,16 @@
     <text>当前版本</text>
   </view>
   <view class='content'>
-    <text>2019年2月1日 1.1.190201 正式版</text>
+    <text>2019年2月19日 2.0.1902019</text>
   </view>
   <view class='subtitle'>
     <text>更新内容</text>
   </view>
-  <view class='content fixed'>
-    <text>景深范围计算工具计算出后景深为无穷远时提示输入错误的bug。</text>
-  </view>
-  <view class='content fixed'>
-    <text>朋友圈高清图片生成器输入的图片长宽比大于2:1时发生裁剪的bug。</text>
+  <view class='content added'>
+    <text>添加九宫图片分割工具。</text>
   </view>
   <view class='content enhanced'>
-    <text>朋友圈高清图片生成器的步骤提示。</text>
+    <text>图片自定义加水印工具压缩模式支持自定义分辨率。</text>
   </view>
   <view class='subtitle'>
     <text>历史版本</text>
@@ -150,12 +169,6 @@
   </view>
   <view class='content plan'>
     <text>添加图片常用比例裁剪工具。</text>
-  </view>
-  <view class='content plan'>
-    <text>朋友圈高清图片生成器添加压缩模式，优化稳定性。</text>
-  </view>
-  <view class='content plan'>
-    <text>图片自定义加水印工具压缩模式支持自定义压缩分辨率。</text>
   </view>
   <view class='content plan'>
     <text>景深范围计算工具支持自定义弥散圆大小。</text>
@@ -209,36 +222,47 @@
           <text>版本历史</text>
         </view>
         <view class='content'>
-          <text>2019年1月31日 1.0.190131 正式版</text>
+          <text>2019年2月1日 1.1.190201</text>
+        </view>
+        <view class='subcontent fixed'>
+          <text>景深范围计算工具计算出后景深为无穷远时提示输入错误的bug。</text>
+        </view>
+        <view class='subcontent fixed'>
+          <text>朋友圈高清图片生成器输入的图片长宽比大于2:1时发生裁剪的bug。</text>
+        </view>
+        <view class='subcontent enhanced'>
+          <text>朋友圈高清图片生成器的步骤提示。</text>
         </view>
         <view class='content'>
-          <text>2019年1月30日 0.8.190130 Beta版</text>
+          <text>2019年1月31日 1.0.190131</text>
         </view>
-        <view class='content'>
-          <text>2019年1月29日 0.7.190129 Beta版</text>
-        </view>
-        <view class='content'>
-          <text>2019年1月28日 0.6.190128 Beta版</text>
-        </view>
-        <view class='content'>
-          <text>2019年1月27日 0.5.190127 Beta版</text>
-        </view>
-        <view class='content'>
-          <text>2019年1月26日 0.4.190126 Beta版</text>
-        </view>
-        <view class='content'>
-          <text>2019年1月25日 0.3.190125 Beta版</text>
-        </view>
-        <view class='content'>
-          <text>2019年1月24日 0.2.190124 Beta版</text>
-        </view>
-        <view class='content'>
-          <text>2019年1月23日 0.1.190123 Beta版</text>
+        <view class='subcontent'>
+          <text>第一版完成。</text>
         </view>
       </scroll-view>
     </view>
     <view class='container panel-button-holder'>
       <button class='text-button' bindtap='hidePanel' id='history'>
+        <text>确定</text>
+        <view class='button-mask' hover-class='button-mask__hover'></view>
+      </button>
+    </view>
+  </view>
+</view>
+<view class="panel-holder {{show != 'gridsDivider' ? 'panel-hidden' : ''}}">
+  <view class='panel'>
+    <view class='container'>
+      <scroll-view scroll-y='true' class='panel-text-holder'>
+        <view class='subtitle'>
+          <text>九宫图片分割工具</text>
+        </view>
+        <view class='content'>
+          <text>由于微信小程序纯前端处理的性能限制，如果您选择的照片尺寸过大，可能会造成小程序崩溃。如果您遇到闪退的情况，请勾选“开启压缩”选项，保证程序正常工作。本模块采用分区域处理的方法，相对更不易崩溃，因此通常您不需要开启压缩。</text>
+        </view>
+      </scroll-view>
+    </view>
+    <view class='container panel-button-holder'>
+      <button class='text-button' bindtap='hidePanel' id='gridsDivider'>
         <text>确定</text>
         <view class='button-mask' hover-class='button-mask__hover'></view>
       </button>
@@ -253,7 +277,7 @@
           <text>朋友圈高清图片生成器</text>
         </view>
         <view class='content'>
-          <text>本模块工作的原理是为图片添加透明的边框，使其长宽比大于二比一。由于微信朋友圈对于长宽比大于二比一的图片允许更高的分辨率，因此经过处理的图片在发布朋友圈时可以避免被再次压缩，保证相对清晰的画质。</text>
+          <text>本模块工作的原理是为图片添加透明的边框，使其长宽比大于2:1。由于微信朋友圈对于长宽比大于2:1的图片允许更高的分辨率，因此经过处理的图片在发布朋友圈时可以避免被再次压缩，保证相对清晰的画质。</text>
         </view>
       </scroll-view>
     </view>
@@ -293,7 +317,7 @@
           <text>图片自定义加水印工具</text>
         </view>
         <view class='content'>
-          <text>由于微信小程序纯前端处理的性能限制，如果您选择的照片尺寸过大，可能会造成小程序崩溃。如果您遇到闪退等情况，请您勾选“开启压缩”选项，保证程序正常工作。</text>
+          <text>由于微信小程序纯前端处理的性能限制，如果您选择的照片尺寸过大，可能会造成小程序崩溃。如果您遇到闪退的情况，请勾选“开启压缩”选项，保证程序正常工作。您可以自定义压缩分辨率，在程序不崩溃的前提下输出尽可能高质量的图片。</text>
         </view>
       </scroll-view>
     </view>
