--- a/pages/image/waterMarker/waterMarker.wxml
+++ b/pages/image/waterMarker/waterMarker.wxml
@@ -395,6 +395,12 @@
       </view>
     </view>
     <view class='container'>
+      <button class='main-button' bindtap='noTemplate'>
+        <text>创建水印模板</text>
+        <view class='button-mask' hover-class='button-mask__hover'></view>
+      </button>
+    </view>
+    <view class='container'>
       <button class='side-button' bindtap='deleteAllTemplates'>
         <text>删除全部水印模板</text>
         <view class='button-mask' hover-class='button-mask__hover'></view>
