--- a/pages/index/help/help.wxml
+++ b/pages/index/help/help.wxml
@@ -146,16 +146,13 @@
     <text>当前版本</text>
   </view>
   <view class='content'>
-    <text>2019年2月19日 2.0.1902019</text>
+    <text>2019年2月27日 2.1.190227</text>
   </view>
   <view class='subtitle'>
     <text>更新内容</text>
   </view>
-  <view class='content added'>
-    <text>添加九宫图片分割工具。</text>
-  </view>
   <view class='content enhanced'>
-    <text>图片自定义加水印工具压缩模式支持自定义分辨率。</text>
+    <text>图片自定义加水印工具业务逻辑优化。</text>
   </view>
   <view class='subtitle'>
     <text>历史版本</text>
@@ -220,6 +217,15 @@
       <scroll-view scroll-y='true' class='panel-text-holder'>
         <view class='subtitle'>
           <text>版本历史</text>
+        </view>
+        <view class='content'>
+          <text>2019年2月19日 2.0.190219</text>
+        </view>
+        <view class='subcontent added'>
+          <text>添加九宫图片分割工具。</text>
+        </view>
+        <view class='subcontent enhanced'>
+          <text>图片自定义加水印工具压缩模式支持自定义分辨率。</text>
         </view>
         <view class='content'>
           <text>2019年2月1日 1.1.190201</text>
